@@ -1,3 +1,8 @@
+2019-03-22 Magnus Hagdorn 
+ * piccolo3/client/PiccoloBaseClient.py: add async method to observe a
+   resource
+ * piccolo3/client/PiccoloDataDir.py: add classes to handle data directory
+
 2019-03-21 Magnus Hagdorn
  * piccolo3/client/PiccoloSysinfo.py: wrap sysinfo class
 
